Fix formatting of p.note elements in style.css
I broke this in f7ec49989ab24be4a

Also make the text of these 1px bigger, they look too small otherwise.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,11 +90,11 @@ body {
   margin-top: 10px;
 }
 
-.submission-form > tbody > p.note {
-  font-size: 11px;
+.submission-form p.note {
+  font-size: 12px;
   font-style: italic;
   margin-top: 4px;
-  margin-bottom: 0;
+  margin-bottom: 0px;
 }
 
 .submission-form > tbody > tr > td input[type="text"].reg-fee {
